--- a/.fastRequest/config/fastRequestCurrentProjectConfig.json
+++ b/.fastRequest/config/fastRequestCurrentProjectConfig.json
@@ -1,23 +1,37 @@
 {
-	"dataList":[],
-	"envList":[],
-	"headerList":[],
-	"postScript":"",
-	"preScript":"",
-	"projectList":[],
-	"syncModel":{
-		"branch":"master",
-		"domain":"https://github.com",
-		"enabled":false,
-		"namingPolicy":"byDoc",
-		"owner":"",
-		"repo":"",
-		"repoUrl":"",
-		"syncAfterRun":false,
-		"token":"",
-		"type":"github"
-	},
-	"urlEncodedKeyValueList":[],
-	"urlParamsKeyValueList":[],
-	"urlSuffix":""
+  "dataList": [
+    {
+      "hostGroup": [
+        {
+          "env": "local",
+          "url": "http://localhost:8080"
+        }
+      ],
+      "name": "TVDS-Backend"
+    }
+  ],
+  "envList": [
+    "local"
+  ],
+  "headerList": [],
+  "postScript": "",
+  "preScript": "",
+  "projectList": [
+    "TVDS-Backend"
+  ],
+  "syncModel": {
+    "branch": "master",
+    "domain": "https://github.com",
+    "enabled": false,
+    "namingPolicy": "byDoc",
+    "owner": "",
+    "repo": "",
+    "repoUrl": "",
+    "syncAfterRun": false,
+    "token": "",
+    "type": "github"
+  },
+  "urlEncodedKeyValueList": [],
+  "urlParamsKeyValueList": [],
+  "urlSuffix": ""
 }
