--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
         <!-- json处理 -->
         <dependency>
             <groupId>com.alibaba</groupId>
