feat: 数据源大改；零件种类和车厢类型需求变更；AI模型变更

--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,12 @@
             <version>2.11.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.8</version> <!-- 可能需要根据最新版本进行调整 -->
+        </dependency>
+
 
     </dependencies>
 
